fixed issue with the root causing elements to shift around a lot.

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,19 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html, body, #root {
+  width: 100%;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  display: flex;
+  flex-direction: column; /* Ensure content flows in a column layout */
+  align-items: center; /* Centers content if necessary */
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -119,9 +132,13 @@ main {
   align-items: center;
 }
 
-.test-container
+.table-container
 {
   max-width: 80%;
+  min-width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* Table Styling */
@@ -202,6 +219,7 @@ td {
   justify-content: flex-start;
   width: 100%;
   padding: 1em 2em;
+  margin-left: 2em;
 }
 .navbar-nav {
   display: flex; 
